force-app/main/default/objects/MPScale__c/MPScale__c.object-meta.xml
<CustomObject>
    <label>Escala</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Scale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>