force-app/main/default/objects/MPScale__c/fields/Escala__c.field-meta.xml
<CustomField>
    <fullName>Escala__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escala</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MPScale__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Time</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPScale__c</referenceTo>
    <relationshipLabel>Escalas</relationshipLabel>
    <relationshipName>Escalas</relationshipName>
    <type>Lookup</type>
</CustomField>