force-app/main/default/objects/MPScale__c/fields/MPEndDate__c.field-meta.xml
<CustomField>
    <fullName>MPEndDate__c</fullName>
    <label>Fecha Fin</label>
    <type>Date</type>
</CustomField>