force-app/main/default/objects/MPScale__c/fields/MPFinalVolume__c.field-meta.xml
<CustomField>
    <fullName>MPFinalVolume__c</fullName>
    <label>Volumen Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>