force-app/main/default/objects/MPScale__c/fields/MPInitialVolume__c.field-meta.xml
<CustomField>
    <fullName>MPInitialVolume__c</fullName>
    <label>Volumen inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>