force-app/main/default/objects/MPScale__c/fields/MPQuoteCondition__c.field-meta.xml
<CustomField>
    <fullName>MPQuoteCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condición de Presupuesto</label>
    <referenceTo>MPQuoteCondition__c</referenceTo>
    <relationshipLabel>Escalas</relationshipLabel>
    <relationshipName>Escalas</relationshipName>
    <type>Lookup</type>
</CustomField>