force-app/main/default/objects/MPScale__c/fields/MPValue__c.field-meta.xml
<CustomField>
    <fullName>MPValue__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>