force-app/main/default/objects/MPScale__c/recordTypes/Time.recordType-meta.xml
<RecordType>
    <fullName>Time</fullName>
    <active>true</active>
    <label>Time</label>
</RecordType>