force-app/main/default/objects/MPScale__c/recordTypes/Volume.recordType-meta.xml
<RecordType>
    <fullName>Volume</fullName>
    <active>true</active>
    <label>Volume</label>
</RecordType>