force-app/main/default/objects/MPScale__c/validationRules/VRSCL_001_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VRSCL_001_StartDate</fullName>
    <active>true</active>
    <description>La Fecha de Inicio de la escala no puede ser menor a la Fecha de Inicio del Contrato (Opp)</description>
    <errorConditionFormula>MPStartDate__c  &lt; MPQuoteCondition__r.MPQuote__r.Opportunity.MPContractStartDate__c</errorConditionFormula>
    <errorDisplayField>MPStartDate__c</errorDisplayField>
    <errorMessage>La Fecha de Inicio no puede ser menor a la Fecha del Contrato.(VRSCL_001)</errorMessage>
</ValidationRule>