force-app/main/default/objects/MPScale__c/validationRules/VRSCL_003_StartAndEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VRSCL_003_StartAndEndDate</fullName>
    <active>true</active>
    <description>La Fecha Fin de la escala no puede ser menor o igual a la Fecha de Inicio de la Escala.</description>
    <errorConditionFormula>MPEndDate__c   &lt;=    MPStartDate__c</errorConditionFormula>
    <errorDisplayField>MPEndDate__c</errorDisplayField>
    <errorMessage>La Fecha Fin no puede ser menor o igual a la Fecha Inicio.(VRSCL_003)</errorMessage>
</ValidationRule>