force-app/main/default/objects/MPScale__c/validationRules/VRSCL_004_RecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>VRSCL_004_RecordType</fullName>
    <active>true</active>
    <description>Usuario no puede cambiar tipo de registro</description>
    <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED(RecordTypeId ))</errorConditionFormula>
    <errorMessage>No puedes modificar el Tipo de Registro.(VRSCL_004)</errorMessage>
</ValidationRule>